src/App.scss
@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";

$background:#1C1B1F;
$background_card:#2A2831;
$on_card_color:#CCC2DC;
$on_card_color_hover:#e4d9f5;

.material-symbols-rounded {
  font-variation-settings:
  'FILL' 1,
  'wght' 400,
  'GRAD' 0,
  'opsz' 48
}
/* Указываем box sizing */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Убираем внутренние отступы */
ul[class],
ol[class] {
  padding: 0;
}

/* Убираем внешние отступы */
body,
h1,
h2,
h3,
h4,
p,
ul[class],
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
  margin: 0;
}

/* Выставляем основные настройки по-умолчанию для body */
body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
ul[class],
ol[class] {
  list-style: none;
}

/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Упрощаем работу с изображениями */
img {
  max-width: 100%;
  display: block;
}

/* Указываем понятную периодичность в потоке данных у article*/
article > * + * {
  margin-top: 1em;
}

/* Наследуем шрифты для инпутов и кнопок */
input,
button,
textarea,
select {
  font: inherit;
}

/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.container {
    margin-left: auto;
    margin-right: auto;
    width: 936px;
}

body {
    background-color: $background;
    font-family: Roboto;
}

header{
    margin-top: 56px;
}

.cards__wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 24px;
    margin-top: 40px;
    * {
        transition: cubic-bezier(0.075, 0.82, 0.165, 1);
        transition: 200ms;
    }
    .card {
        background-color: $background_card;
        border-radius: 24px;
        text-decoration: none;
        color: $on_card_color;

        &:hover{
            color: $on_card_color_hover;
            border-radius: 50px;
            .card__img{
                border-radius: 50px;
            }
        }
        .card__img {
            height: 200px;
            border-radius: 24px;
        }
        .card__text{
            display: flex;
            flex-direction: column;
            gap: 8px;
            padding: 24px;
            .card__title{
                font-size: 24px;
                font-weight: 500;
            }
            .card__description {
                font-size: 16px;
                font-weight: 400;
            }
        }
    }
}

nav {
  box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.3), 0px 4px 4px rgba(0, 0, 0, 0.3);
  background: #2A2831;
  position: sticky;
  margin-top: 40px;
  bottom: 0;
  width: 100%;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  color: $on_card_color;
  span {
    font-size: 16px;
  }
  .navbar__item {
    width: 93px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5px;
    text-decoration: none;
    color: $on_card_color;

    * {
      transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
      transition: 200ms;
    }

    .navbar__item_box{
      width: 64px;
      height: 32px;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    .navbar__item_text {
      text-align: center;
      font-style: normal;
      font-weight: 500;
      font-size: 12px;
      line-height: 16px;
      letter-spacing: 0.2px;
    }
  }
}

.navbar__item_active {
  .navbar__item_box{
    background-color: #4A4458;
    border-radius: 16px;
  }
}

